dnl Process this file with autoconf to produce a configure script.

dnl This file is part of flex.

dnl Redistribution and use in source and binary forms, with or without
dnl modification, are permitted provided that the following conditions
dnl are met:

dnl 1. Redistributions of source code must retain the above copyright
dnl notice, this list of conditions and the following disclaimer.
dnl 2. Redistributions in binary form must reproduce the above copyright
dnl notice, this list of conditions and the following disclaimer in the
dnl documentation and/or other materials provided with the distribution.

dnl Neither the name of the University nor the names of its contributors
dnl may be used to endorse or promote products derived from this software
dnl without specific prior written permission.

dnl THIS SOFTWARE IS PROVIDED ``AS IS'' AND WITHOUT ANY EXPRESS OR
dnl IMPLIED WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED
dnl WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
dnl PURPOSE.

AC_PREREQ(2.50)
AC_INIT(flex,2.5.18,help-flex@gnu.org)
AC_CONFIG_SRCDIR(scan.l)
AM_INIT_AUTOMAKE
AM_CONFIG_HEADER(config.h:conf.in)
AM_GNU_GETTEXT
AM_GNU_GETTEXT_VERSION(0.11.5)

AC_TYPE_SIZE_T
AC_HEADER_STDC
AC_CHECK_HEADERS(string.h malloc.h sys/types.h unistd.h stdbool.h)
AC_CHECK_HEADERS(cunistd netinet/in.h)

AC_PROG_YACC
AM_PROG_LEX
AC_PROG_CC
AC_PROG_LN_S
AC_PROG_RANLIB

AC_PATH_PROG(BISON, bison, $srcdir/missing)
AC_PATH_PROG(HELP2MAN, help2man, $srcdir/missing)
AC_PATH_PROG(M4, m4, $srcdir/missing)
AC_PATH_PROG(INDENT, indent, $srcdir/missing)
if test "$INDENT" != $srcdir/missing ; then
   AC_MSG_CHECKING(if $INDENT is GNU indent)
   if $INDENT --version 2>/dev/null | head -1|grep "GNU indent" > /dev/null ; then
      AC_MSG_RESULT(yes)
   else
      AC_MSG_RESULT(no)
      AC_MSG_WARN($INDENT does not appear to be GNU indent.)
   fi
else
   AC_MSG_WARN(no indent program found: make indent target will not function)
fi

AC_CONFIG_FILES(
Makefile
examples/Makefile
examples/fastwc/Makefile
examples/manual/Makefile
m4/Makefile
po/Makefile.in
intl/Makefile
tests/Makefile
tests/TEMPLATE/Makefile
tests/test-array-nr/Makefile
tests/test-array-r/Makefile
tests/test-basic-nr/Makefile
tests/test-basic-r/Makefile
tests/test-bison-yylloc/Makefile
tests/test-bison-yylval/Makefile
tests/test-c-cpp-nr/Makefile
tests/test-c-cpp-r/Makefile
tests/test-header-nr/Makefile
tests/test-header-r/Makefile
tests/test-include-by-buffer/Makefile
tests/test-include-by-reentrant/Makefile
tests/test-multiple-scanners-nr/Makefile
tests/test-multiple-scanners-r/Makefile
tests/test-prefix-nr/Makefile
tests/test-prefix-r/Makefile
tests/test-pthread/Makefile
tests/test-string-nr/Makefile
tests/test-string-r/Makefile
tests/test-yyextra/Makefile
tests/test-lineno-nr/Makefile
tests/test-lineno-r/Makefile
tests/test-debug-r/Makefile
tests/test-debug-nr/Makefile
tests/test-mem-nr/Makefile
tests/test-mem-r/Makefile
tests/test-posix/Makefile
tests/test-posixly-correct/Makefile
tests/test-table-opts/Makefile
tests/test-c++-basic/Makefile
dnl --new-test-here-- This line is processed by tests/create-test.
)

AC_OUTPUT
